--- a/template/index.html
+++ b/template/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
-    <link rel="stylesheet" href="./lib/leaflet-measure.css" />
-    <link rel="stylesheet" href="./lib/MarkerCluster.css" />
-    <link rel="stylesheet" href="./lib/MarkerCluster.Default.css" />
+    <link rel="stylesheet" href="{%static './lib/leaflet-measure.css' % }" />
+    <link rel="stylesheet" href="{%static '././lib/MarkerCluster.css'% }" />
+    <link rel="stylesheet" href="{%static '././lib/MarkerCluster.Default.css'% }" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     
@@ -76,13 +76,13 @@
 
 <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="./lib/leaflet.browser.print.min.js"></script>
-<script src="./lib/leaflet-measure.js"></script>
+<script src="%static '././lib/leaflet.browser.print.min.js"></script>
+<script src="%static '././lib/leaflet-measure.js"></script>
 
-<script src="./lib/leaflet.markercluster.js"></script>
+<script src="{%static '././lib/leaflet.markercluster.js'%}"></script>
 <script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
 
-<script src="./data/test.js"></script>
-<script src="./dist/main.js"></script>
-<script src="./dist/web-GIS.js"></script>
+<script src="{%static './data/test.js'%}"></script>
+<script src="{%static './dist/main.js'%}"></script>
+<script src="{%static './dist/web-GIS.js'%}"></script>
 
